Fixed overflow

--- a/src/components/PageTools/BrushCircle/BrushCircle.module.css
+++ b/src/components/PageTools/BrushCircle/BrushCircle.module.css
@@ -5,11 +5,15 @@
   border-radius: 50%;
   background: radial-gradient(circle, #d3f136, rgba(211, 241, 54, 0) 70%);
   z-index: -1; /* Increased z-index to make it appear on top */
+  
+  pointer-events: none;
 }
 
 @media (max-width: 779px) {
     .brushCircle {
         top: 10%;
+        
+  pointer-events: none;
     }
 }
 
