--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@ body {
   background-color: #F0F0F0;
 }
 
+html {
+  overflow: hidden;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
